--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,29 +2,25 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [ master, main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      # Set up Python 3.6 environment
-      - name: Set up Python 3.6
+      - name: Set up Python 3.9
         uses: actions/setup-python@v1
         with:
-          python-version: "3.6"
+          python-version: "3.9"
 
-      # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run our unit tests
       - name: Run unit tests
         run: |
           python test_application.py
