--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Run unit tests
         run: |
           python app_test.py
-          python run app.py
+          python app.py
